--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am mandar and this is my first webapp.
+            <h1>Hi! I am mandar and this is my first webapp</h1>.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
